apps/overseerr/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: sctx/overseerr:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseerr-config
