apps/overseerr/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: overseerr
spec:
  selector:
    app: overseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
